
	* lib/gnome.org.cygclass: Add GNOME SVN_URI.
	* lib/svn.cygclass: Append SVN_BRANCH (defaults to 'trunk') to SVN_URI.

	* CYGWIN-PATCHES/README
	* configure.ac:
	Post-release version bump.

*** 0.2.8 ***

	* CYGWIN-PATCHES/README
	* lib/Makefile.am
	* lib/wxwidgets.cygclass:
	New cygclass for building wxWidgets-dependent packages.

	* autogen.sh: Fix ac-2.60 to 2.61 transition.
	* bin/cygport.in (cygautoreconf): Use datarootdir with ac-2.61 also.
	Prepare for ac-2.62.
	Reported by Charles Wilson:
	http://cygwin.com/ml/cygwin/2007-01/msg00109.html

    * bin/cygport.in (apply_patch): Correct variable names.
	Patch by Charles Wilson:
	http://cygwin.com/ml/cygwin/2007-01/msg00118.html

	* Add .cvsignore files.

	* bin/cygport.in (apply_patch):
	Fix patchlevel for .cygwin.patch, making code more readable as well.
	Reported by Christian Franke:
	http://cygwin.com/ml/cygwin/2007-01/msg00036.html

	* lib/gtk2-perl.cygclass: Fix DEPS_PATH.  Fix Gnome2-Rsvg dependencies.

	* CYGWIN-PATCHES/README
	* configure.ac:
	Post-release version bump.

*** 0.2.7 ***

	* CYGWIN-PATCHES/README
	* configure.ac
	* doc/Makefile.am: Use groff instead of man2html.

	* bin/cygport.in (__list_deps): Ignore KERNEL32.dll. Show mono dep.

	* data/mirrors (mirror_trolltech): Added.

	* bin/cygport.in: Support autoconf-2.61.

	* bin/cygport.in: Move comment.
	* doc/Makefile.am
	* test/bootstrap: Fix make distcheck.

	* TODO
	* bin/cygport.in (src_fetch, src_prep, apply_patch, pkg_srcpkg):
	Implement PATCH_URI for upstream or third-party patches.
	(cygautoreconf): Fix where not using AC_CONFIG_HEADERS.

	* data/mirrors (mirror_portage): New mirror for gentoo-x86 CVS repo.
	(mirror_sourceforge): Prepend downloads.sourceforge.net.
	(mirror_vim): Added.

	* bin/cygport.in (__list_deps): 
	New algorithm for calculating deps.  More accurate and usually faster.

	* bin/cygport.in (fetch, src_fetch): Support HTTPS with invalid certs.

	* bin/cygport.in (cygautoreconf)